--- a/ng1/package.json
+++ b/ng1/package.json
@@ -12,16 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "~8.2.7",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "chart.js": "^2.9.2",
+    "chartjs-plugin-annotation": "^0.5.7",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
